--- a/styles/TopBar/TopBar.less
+++ b/styles/TopBar/TopBar.less
@@ -2,6 +2,7 @@
 
 .topbar {
   .flex(row);
+  flex-wrap: nowrap;
   align-items: center;
   height: @TopBarHeight;
   padding: 17px 15px;
